Fixed random white space on the right side on mobile view

--- a/theme.css
+++ b/theme.css
@@ -61,6 +61,10 @@
   }
 }
 
+html, body {
+  overflow-x:hidden 
+} 
+
 a {
   text-decoration: none;
 }
